--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -14,7 +14,7 @@
   "email": "Email",
   "nodal_officer": "Nodal Officer",
   "contact_nodal_officer": "Contact Nodal Officer",
-  "category":"Category",
+  "category": "Category",
   "no_data_available": "No data available.",
   "error": "Error",
   "home": "Home",
@@ -44,16 +44,16 @@
   "password_dont_match": "Passwords do not match",
   "full_name": "Full name",
   "phone_number": "Phone number",
-  "create_password": "password number",
-  "confirm_password": "Confirm password",
+  "create_password": "Create Password",
+  "confirm_password": "Confirm Password",
   "availabel_for_organ_donation": "Available for Organ Donation",
   "avilabel_for_blood_donation": "Available for Blood Donation",
   "by_sign_your_account_you_agree_terms_and": "By signing you agree to terms and",
   "use_and_the_privacy_notice": "use and the privacy notice",
   "password_error_text": "Password must be 8 character long and must have aleast 1 uppercase,1 Lowercase,1 digit,1 special character",
-  "phone_number_error_text":"Phone number must be of 10 Digit",
-  "name_field_error_text":"Name can not be Empty",
-  "email_field_error_text":"Email is Wrong or Blank, Kindly Enter correct Email",
-  "create_account":"Create your new account",
-  "register":"Register"
+  "phone_number_error_text": "Phone number must be of 10 Digit",
+  "name_field_error_text": "Name can not be Empty",
+  "email_field_error_text": "Email is Wrong or Blank, Kindly Enter correct Email",
+  "create_account": "Create your new account",
+  "register": "Register"
 }
